--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,6 @@
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
 # Package Files #
 *.jar
 *.war
@@ -20,5 +14,83 @@
 *.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+jlox/hs_err_pid*
+jlox/replay_pid*
+
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# User-specific stuff
+jlox/.idea/**/workspace.xml
+jlox/.idea/**/tasks.xml
+jlox/.idea/**/usage.statistics.xml
+jlox/.idea/**/dictionaries
+jlox/.idea/**/shelf
+
+# AWS User-specific
+jlox/.idea/**/aws.xml
+
+# Generated files
+jlox/.idea/**/contentModel.xml
+
+# Sensitive or high-churn files
+jlox/.idea/**/dataSources/
+jlox/.idea/**/dataSources.ids
+jlox/.idea/**/dataSources.local.xml
+jlox/.idea/**/sqlDataSources.xml
+jlox/.idea/**/dynamic.xml
+jlox/.idea/**/uiDesigner.xml
+jlox/.idea/**/dbnavigator.xml
+
+# Gradle
+jlox/.idea/**/gradle.xml
+jlox/.idea/**/libraries
+
+# Gradle and Maven with auto-import
+# When using Gradle or Maven with auto-import, you should exclude module files,
+# since they will be recreated, and may cause churn.  Uncomment if using
+# auto-import.
+# .idea/artifacts
+# .idea/compiler.xml
+# .idea/jarRepositories.xml
+# .idea/modules.xml
+# .idea/*.iml
+# .idea/modules
+# *.iml
+# *.ipr
+
+# CMake
+jlox/cmake-build-*/
+
+# Mongo Explorer plugin
+jlox/.idea/**/mongoSettings.xml
+
+# File-based project format
+*.iws
+
+# IntelliJ
+jlox/out/
+
+# mpeltonen/sbt-idea plugin
+jlox/.idea_modules/
+
+# JIRA plugin
+jlox/atlassian-ide-plugin.xml
+
+# Cursive Clojure plugin
+jlox/.idea/replstate.xml
+
+# SonarLint plugin
+jlox/.idea/sonarlint/
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+jlox/com_crashlytics_export_strings.xml
+jlox/crasjlox/hlytics.properties
+jlox/crashlytjlox/ics-build.properties
+jlox/fabric.propejlox/rties
+
+# Editor-based Rest Client
+jlox/.idea/httpRequests
+
+# Android studio 3.1+ serialized cache file
+jlox/.idea/caches/build_file_checksums.ser
